@@ -6,7 +6,8 @@ Version 0.2
 	Introduced PdfReference class
 	Fixed PdfStream::GetFilteredCopy
 	Improved handling of DecodeParms for filters
-	Fixed PDF files with more than one DecodeParms dictionary in one object
+	Fixed PDF files with more than one DecodeParms dictionary in one
+	object
 
 Version 0.1 (11 June 2006)
 	Initial release
